--- a/catalogo-burntech/index.html
+++ b/catalogo-burntech/index.html
@@ -36,12 +36,12 @@
     <section class="card">
       <img src="images/caldeira1.jpg" alt="Caldeira Industrial 500 kg/h">
       <div class="card-body">
-        <h3>Caldeira 500 kg/h</h3>
-        <p>Compacta e eficiente para pequenas e médias demandas.</p>
+        <h3>Caldeira VRT MAX</h3>
+        <p>Caldeira vertical flamotubular</p>
         <ul>
-          <li>Vazão: 500 kg/h</li>
-          <li>Pressão: até 10 bar</li>
-          <li>Combustível: gás natural / GLP</li>
+          <li>Retomada 2 vezes mais rápida</li>
+          <li>Tubos com tecnologia para prevenção da erosão</li>
+          <li>Tecnologia Ash-Free / Sem acúmulo de cinzas / Sem parada para limpezas</li>
         </ul>
       </div>
     </section>
@@ -49,12 +49,12 @@
     <section class="card">
       <img src="images/caldeira2.jpg" alt="Caldeira 2000 kg/h Automática">
       <div class="card-body">
-        <h3>Caldeira 2000 kg/h Automática</h3>
-        <p>Automação completa, operação segura e menor consumo.</p>
-        <ul>
-          <li>Vazão: 2000 kg/h</li>
-          <li>Pressão: até 14 bar</li>
-          <li>Combustível: gás / óleo</li>
+        <h3>Caldeira AQUAMAX 316 type</h3>
+        <p>Caldeira aquatubular</p>
+         <ul>
+          <li>Sobregarga de 140%</li>
+          <li>Tubos com tecnologia para prevenção da erosão</li>
+          <li>Tecnologia Ash-Free / Sem acúmulo de cinzas / Sem parada para limpezas</li>
         </ul>
       </div>
     </section>
@@ -62,12 +62,12 @@
     <section class="card">
       <img src="images/caldeira3.jpg" alt="Caldeira a Biomassa">
       <div class="card-body">
-        <h3>Caldeira Biomassa</h3>
-        <p>Sustentável: utiliza cavaco, pellets ou resíduos agrícolas.</p>
+        <h3>Aquecedor Vertical de Fluido Térmico</h3>
+        <p>Desenvolvido para processos de alta temperatura e baixa pressão como, indústrias têxteis, químicas, secagem, entre outros.</p>
         <ul>
-          <li>Vazão: 1000–4000 kg/h</li>
-          <li>Pressão: até 18 bar</li>
-          <li>Combustível: biomassa</li>
+          <li>Exclusivo controle automático da temperatura dos gases na entrada da serpentina</li>
+          <li>Dispensa obras civis onerosas, pois é instalado ao nível do piso</li>
+           <li>Tecnologia Ash-Free / Sem acúmulo de cinzas / Sem parada para limpezas</li>
         </ul>
       </div>
     </section>
@@ -75,13 +75,12 @@
     <section class="card">
       <img src="images/caldeira4.jpg" alt="Caldeira de Alta Pressão">
       <div class="card-body">
-        <h3>Caldeira Alta Pressão</h3>
-        <p>Projetada para processos críticos de alta confiabilidade.</p>
-        <ul>
-          <li>Vazão: 3000–8000 kg/h</li>
-          <li>Pressão: até 25 bar</li>
-          <li>Combustível: gás / óleo</li>
-        </ul>
+        <h3>Caldeira HRX MAX </h3>
+        <p>Caldeira horizontal flamotubular</p>
+         <ul>
+          <li>Retomada 2 vezes mais rápida</li>
+          <li>Tubos com tecnologia para prevenção da erosão</li>
+          <li>Tecnologia Ash-Free / Sem acúmulo de cinzas / Sem parada para limpezas</li>
       </div>
     </section>
   </main>
@@ -92,19 +91,19 @@
   <section id="sobre" class="sobre">
     <h2>Sobre a BURNTECH</h2>
     <p>Com quase 50 anos de experiência em geração de vapor e energia a biomassa, a Burntech é referência em caldeiras de alta qualidade. Nossa equipe de engenheiros impulsiona inovações constantes, sempre focada em eficiência energética e na satisfação dos clientes.
-Nossas instalações, alinhadas à Indústria 4.0, garantem tecnologia de ponta e reconhecimento internacional. Além disso, unimos excelência em produtos ao compromisso com a sustentabilidade e a responsabilidade social.
-A energia que geramos aquece indústrias, fortalece parcerias e transforma desafios em oportunidades, consolidando uma trajetória de qualidade e foco no futuro..</p>
+<p>Nossas instalações, alinhadas à Indústria 4.0, garantem tecnologia de ponta e reconhecimento internacional. Além disso, unimos excelência em produtos ao compromisso com a sustentabilidade e a responsabilidade social.</p>
+<p>A energia que geramos aquece indústrias, fortalece parcerias e transforma desafios em oportunidades, consolidando uma trajetória de qualidade e foco no futuro...</p>
   </section>
 
   <!-- Contato -->
   <section id="contato" class="contato">
-    <h2>Contato</h2>
-    <p>E-mail: comercial@burntech.com.br • Telefone: (00) 0000-0000</p>
+    <h2>Contato</h2>  
+    <p>E-mail: vinicius.macedo@burntech.com.br • Telefone: (47) 99279-6322</p>
   </section>
 
   <!-- Rodapé -->
   <footer>
-    <p>© 2025 • BURNTECH • Soluções em Caldeiras Industriais</p>
+    <p>© 2025 • BURNTECH • Qualidade que dura gerações</p>
   </footer>
 
   <script src="script.js"></script>
