--- a/catalogo-burntech/index.html
+++ b/catalogo-burntech/index.html
@@ -34,7 +34,7 @@
   <!-- Conteúdo principal -->
   <main id="modelos" class="grid-container">
     <section class="card">
-      <img src="images/caldeira1.png" alt="Caldeira Industrial 500 kg/h">
+      <img src="images/caldeira1.png" alt="Caldeira VRT MAX">
       <div class="card-body">
         <h3>Caldeira VRT MAX</h3>
         <p>Caldeira vertical flamotubular</p>
@@ -47,7 +47,7 @@
     </section>
 
     <section class="card">
-      <img src="images/caldeira2.png" alt="Caldeira 2000 kg/h Automática">
+      <img src="images/caldeira2.png" alt="Caldeira AQUAMAX 316 type">
       <div class="card-body">
         <h3>Caldeira AQUAMAX 316 type</h3>
         <p>Caldeira aquatubular</p>
@@ -60,7 +60,7 @@
     </section>
 
     <section class="card">
-      <img src="images/caldeira3.png" alt="Caldeira a Biomassa">
+      <img src="images/caldeira3.png" alt="Aquecedor Vertical de Fluido Térmico">
       <div class="card-body">
         <h3>Aquecedor Vertical de Fluido Térmico</h3>
         <p>Desenvolvido para processos de alta temperatura e baixa pressão como, indústrias têxteis, químicas, secagem, entre outros.</p>
@@ -73,7 +73,7 @@
     </section>
 
     <section class="card">
-      <img src="images/caldeira4.png" alt="Caldeira de Alta Pressão">
+      <img src="images/caldeira4.png" alt="Caldeira HRX MAX">
       <div class="card-body">
         <h3>Caldeira HRX MAX </h3>
         <p>Caldeira horizontal flamotubular</p>
