--- a/website_assets/index.html
+++ b/website_assets/index.html
@@ -303,8 +303,8 @@
                     <h4 class="footer-subtitle">Contato</h4>
                     <div class="footer-contact">
                         <p><i class="fas fa-envelope"></i> contato@agenciadigital.com.br</p>
-                        <p><i class="fas fa-phone"></i> (11) 9999-9999</p>
-                        <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
+                        <p><i class="fas fa-phone"></i> (47) 992790-6322</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Pouso Redondo, SC</p>
                     </div>
                 </div>
             </div>
